--- a/shaneworld/force-app/main/default/classes/YGoProDeckCallout.cls
+++ b/shaneworld/force-app/main/default/classes/YGoProDeckCallout.cls
@@ -1,94 +1,126 @@
-public with sharing class YGoProDeckCallout{
+public with sharing class YGoProDeckCallout
+{
     //Main Link for callout to the API.
     public static final String ygoprodecklink = 'https://db.ygoprodeck.com/api/v7/cardinfo.php';
-       
-    public static void getCards(){
-        Http http = new Http();        
-        HttpRequest req = new HttpRequest();
-        req.setEndpoint(ygoprodecklink + '?archetype=Blue-Eyes');
-        req.setMethod('GET');
-        HttpResponse res = http.send(req);
-        //Parsing the JSON response as a Map. 
-		Map<String, Object> jsonResponse = (Map<String, Object>) JSON.deserializeUntyped(res.getBody());
-        //Data is the only Map key-value pair returned and data is a list of JSON objects.
-        List<Object> data = (List<Object>) jsonResponse.get('data');
-        //Each JSON object returned is the individual card information which can be put into a Map.
-        Map<String,Object> cardData;
-        for(Object o: data){
-            cardData = (Map<String, Object>) o;
-            System.debug(cardData.get('name'));
-        }
+    static List<YuGiOh_Card__c> cardList;
+    
+    //This method is unabled to be ran due to the amount of all cards in the 
+    //API database. 
+    @AuraEnabled
+    public static List<YuGiOh_Card__c> displayAllCards()
+    {        
+        calloutResponse(null);
+        return cardList;
     }
-    public static void getCards(String query){
-        Http http = new Http();        
-        HttpRequest req = new HttpRequest();
-        req.setEndpoint(ygoprodecklink + '?archetype=Blue-Eyes');
-        req.setMethod('GET');
-        HttpResponse res = http.send(req);
-        //Parsing the JSON response as a Map. 
-		Map<String, Object> jsonResponse = (Map<String, Object>) JSON.deserializeUntyped(res.getBody());
-        //Data is the only Map key-value pair returned and data is a list of JSON objects.
-        List<Object> data = (List<Object>) jsonResponse.get('data');
-        //Each JSON object returned is the individual card information which can be put into a Map.
-        Map<String,Object> cardData;
-        for(Object o: data){
-            cardData = (Map<String, Object>) o;
-            System.debug(cardData.get('name'));
-        }
-    }
-}
-//Example JSON response. 
-/* {
-  "data": [
+    @AuraEnabled
+    public static List<YuGiOh_Card__c> findCards(YuGiOh_Card__c searchCard)
     {
-      "id": 6983839,
-      "name": "Tornado Dragon",
-      "type": "XYZ Monster",
-      "desc": "2 Level 4 monsters\nOnce per turn (Quick Effect): You can detach 1 material from this card, then target 1 Spell/Trap on the field; destroy it.",
-      "atk": 2100,
-      "def": 2000,
-      "level": 4,
-      "race": "Wyrm",
-      "attribute": "WIND",
-      "card_sets": [
+        String query = '?';
+        
+        if(searchCard.Name != null || searchCard.Name != '' )
         {
-          "set_name": "Battles of Legend: Relentless Revenge",
-          "set_code": "BLRR-EN084",
-          "set_rarity": "Secret Rare",
-          "set_rarity_code": "(ScR)",
-          "set_price": "4.08"
-        },
+            if(query == '?')
+            {
+                query += ('fname=' + searchCard.Name);
+            }
+            else
+            {
+                query += ('&fname=' + searchCard.Name); 
+            }           
+        } 
+        if(searchCard.Card_Frame__c != null && searchCard.Card_Frame__c != '') 
         {
-          "set_name": "Duel Devastator",
-          "set_code": "DUDE-EN019",
-          "set_rarity": "Ultra Rare",
-          "set_rarity_code": "(UR)",
-          "set_price": "1.4"
-        },
-        {
-          "set_name": "Maximum Crisis",
-          "set_code": "MACR-EN081",
-          "set_rarity": "Secret Rare",
-          "set_rarity_code": "(ScR)",
-          "set_price": "4.32"
+            if(query == '?') 
+            {
+                query += ('type=' + searchCard.Card_Frame__c);
+            }
+            else
+            {
+                query += ('&type=' + searchCard.Card_Frame__c);
+            }
         }
-      ],
-      "card_images": [
+        if(searchCard.Level__c != null && searchCard.Level__c != 0)
         {
-          "id": 6983839,
-          "image_url": "https://storage.googleapis.com/ygoprodeck.com/pics/6983839.jpg",
-          "image_url_small": "https://storage.googleapis.com/ygoprodeck.com/pics_small/6983839.jpg"
+            if(query == '?')
+            {
+                query += ('level=' + searchCard.Level__c);
+            }
+            else
+            {
+                query += ('&level=' + searchCard.Level__c);
+            }
         }
-      ],
-      "card_prices": [
+        
+        query = query.replace(' ', '%20');
+        System.debug(query);        
+        calloutResponse(query);
+        
+        return cardList;
+    }    
+    
+    public static void calloutResponse(String searchData){
+        
+        Http http = new Http();        
+        HttpRequest req = new HttpRequest();
+        
+        if(searchData == null)
         {
-          "cardmarket_price": "0.42",
-          "tcgplayer_price": "0.48",
-          "ebay_price": "2.99",
-          "amazon_price": "0.77",
-          "coolstuffinc_price": "0.99"
+            req.setEndpoint(ygoprodecklink);
         }
-      ]
-    }
-  ]
-}*/
+        else
+        {
+            req.setEndpoint(ygoprodecklink + searchData);
+        }
+        
+        req.setMethod('GET');
+        HttpResponse res = http.send(req);
+        //Parsing the JSON response as a Map. 
+        Map<String, Object> jsonResponse = (Map<String, Object>) JSON.deserializeUntyped(res.getBody());
+        //Data is the only Map key-value pair returned and data is a list of JSON objects.
+        List<Object> data = (List<Object>) jsonResponse.get('data');
+        
+        if(data == null)
+        {
+           cardList = new List<YuGiOh_Card__c>();
+           return;
+        }
+        
+        Map<String,Object> cardData;
+        List<Object> imageList;
+        Map<String,Object> imageMap;
+        
+        cardList = new List<YuGiOh_Card__c>();
+        
+        for(Object o: data)
+        {
+            cardData = (Map<String, Object>) o;
+            imageList = (List<Object>) cardData.get('card_images');
+            imageMap = (Map<String,Object>) imageList[0];            
+            
+            if(String.valueOf(cardData.get('type')) == 'Spell Card' || String.valueOf(cardData.get('type')) == 'Trap Card')
+            {
+                cardList.add(new YuGiOh_Card__c(Id__c = (Integer) cardData.get('id'), 
+                                                Name = String.valueOf(cardData.get('name')), 
+                                                Card_Frame__c = String.valueOf(cardData.get('type')), 
+                                                Description__c = String.valueOf(cardData.get('desc')),
+                                                Monster_Type__c = String.valueOf(cardData.get('race')),
+                                                Primary_Image__c = String.valueOf(imageMap.get('image_url'))
+                                               )); 
+            }
+            else
+            {                
+                cardList.add(new YuGiOh_Card__c(Id__c = (Integer) cardData.get('id'), 
+                                                Name = String.valueOf(cardData.get('name')), 
+                                                Card_Frame__c = String.valueOf(cardData.get('type')), 
+                                                Description__c = String.valueOf(cardData.get('desc')),
+                                                Attack__c = (Integer) cardData.get('atk'),
+                                                Defense__c = (Integer) cardData.get('def'),
+                                                Level__c  = (Integer) cardData.get('level'),
+                                                Monster_Type__c = String.valueOf(cardData.get('race')),
+                                                Attribute__c = String.valueOf(cardData.get('attribute')), 
+                                                Primary_Image__c = String.valueOf(imageMap.get('image_url_small'))                                           
+                                               ));               
+            }  
+        } 
+    }    
+}
