--- a/shaneworld/force-app/main/default/classes/CustomCardHandler.cls
+++ b/shaneworld/force-app/main/default/classes/CustomCardHandler.cls
@@ -6,16 +6,19 @@ public with sharing class CustomCardHandler
         List<YuGiOh_Card__c> cardList = [SELECT Id FROM YuGiOh_Card__c WHERE Id =: recordId];
         
         for(YuGiOh_Card__c yc: cardList)
-        {
-        	    yc.Primary_Image__c = [SELECT ContentDocumentId, LinkedEntityId 
+        {	
+            try{
+                yc.Primary_Image__c = [SELECT ContentDocumentId, LinkedEntityId 
                                        FROM ContentDocumentLink 
                                        WHERE LinkedEntityId =: yc.Id LIMIT 1].ContentDocumentId;
-        }
-        
+            }
+            catch(System.QueryException e){
+                continue;
+            }
+            catch(System.Exception e){
+                continue;
+            }   
+        }        
         update cardList;
     }
 }
-/*[SELECT Id, LinkedEntityId, ContentDocumentId, Visibility, IsDeleted, ShareType,
-ContentDocument.Title, ContentDocument.createdDate, ContentDocument.FileType
-FROM ContentDocumentLink 
-WHERE LinkedEntityId = '<recordID>'];*/
